[project]
name = "qiskit-mcp-servers"
version = "0.1.0"
description = "Model Context Protocol servers for IBM Quantum services and Qiskit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Quantum+AI Team. IBM Quantum", email = "Quantum.Plus.AI@ibm.com"}
]
keywords = ["quantum", "qiskit", "mcp", "ai", "quantum-computing", "ibm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Qiskit/mcp-servers"
Repository = "https://github.com/Qiskit/mcp-servers"
Documentation = "https://github.com/Qiskit/mcp-servers#readme"
"Bug Tracker" = "https://github.com/Qiskit/mcp-servers/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Workspace configuration for monorepo
[tool.uv.workspace]
members = [
    "qiskit-code-assistant-mcp-server",
    "qiskit-ibm-runtime-mcp-server"
]

# Shared tool configurations
[tool.ruff]
# Extend the shared ruff.toml configuration
extend = "ruff.toml"

[tool.mypy]
# Extend the shared mypy.ini configuration
# Note: mypy doesn't support extend in pyproject.toml, see mypy.ini

[tool.pytest.ini_options]
testpaths = ["qiskit-code-assistant-mcp-server/tests", "qiskit-ibm-runtime-mcp-server/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--asyncio-mode=auto"
]
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running"
]

[tool.coverage.run]
source = [
    "qiskit-code-assistant-mcp-server/src",
    "qiskit-ibm-runtime-mcp-server/src"
]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]
