[project]
name = "qiskit-ibm-transpiler-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.6.13",
    "fastmcp>=2.12.4",
    "langchain-ollama>=0.3.10",
    "mcp-use>=1.2.8",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "qiskit-ibm-transpiler[ai-local-mode]>=0.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
qiskit-ibm-runtime-mcp-server = "qiskit_ibm_transpiler_mcp_server:main"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "mypy>=1.15.0",
]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
exclude = [
    "src/qiskit_ibm_transpiler_mcp_server/demo_client.py",
    "src/qiskit_ibm_transpiler_mcp_server/demo_client_dspy.py"
]

[tool.mypy]
exclude = [
    "src/qiskit_ibm_transpiler_mcp_server/demo_client.py",
    "src/qiskit_ibm_transpiler_mcp_server/demo_client_dspy.py"
]
