[project]
name = "qiskit-ibm-transpiler-mcp-server"
version = "0.1.0"
description = "MCP server for AI Transpiler IBM Quantum services through local and Qiskit IBM Runtime executions"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=2.12.4",
    "qiskit-ibm-transpiler[ai-local-mode]>=0.14.3",
]

keywords = ["quantum", "qiskit", "ibm", "mcp", "ai", "quantum-computing", "transpiler"]

[project.urls]
Homepage = "https://github.com/AI4quantum/qiskit-mcp-servers"
Repository = "https://github.com/AI4quantum/qiskit-mcp-servers"
Documentation = "https://github.com/AI4quantum/qiskit-mcp-servers/tree/main/qiskit-ibm-runtime-mcp-server#readme"
"Bug Tracker" = "https://github.com/AI4quantum/qiskit-mcp-servers/issues"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "mypy>=1.15.0"
]

test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
qiskit-ibm-transpiler-mcp-server = "qiskit_ibm_transpiler_mcp_server:main"
